--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
         <p class="title-label">Статьи и новости</p>
         <h2 class="section-title">Все самое <span class="accent">интересное</span></h2>
         <ul class="list">
-          <li>
-            <p class="label upper">Новость</p>
-            <div>
+          <li class="item">
+            <div class="label-image-content">
+              <p class="label upper">Новость</p>
               <img src="./images/news/img1.jpg" width="420" height="236" alt="">
             </div>
-            <div>
+            <div class="text-content">
               <p class="date">21.03.2020</p>
               <h3>Уникальная услуга «вывеска в аренду»</h3>
               <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в
@@ -328,12 +328,12 @@
               <button class="button upper details" type="button">Подробнее</button>
             </div>
           </li>
-          <li>
-            <p class="label upper">Статья</p>
-            <div>
+          <li class="item">
+            <div class="label-image-content">
+              <p class="label upper">Статья</p>
               <img src="./images/news/img2.jpg" width="420" height="236" alt="">
             </div>
-            <div>
+            <div class="text-content">
               <p class="date">21.03.2020</p>
               <h3>Лайфхаки полиграфии от заказчиков</h3>
               <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не
@@ -342,12 +342,12 @@
               <button class="button upper details" type="button">Подробнее</button>
             </div>
           </li>
-          <li>
-            <p class="label upper">Статья</p>
-            <div>
+          <li class="item">
+            <div class="label-image-content">
+              <p class="label upper">Статья</p>
               <img src="./images/news/img3.jpg" width="420" height="236" alt="">
             </div>
-            <div>
+            <div class="text-content">
               <p class="date">21.03.2020</p>
               <h3>Полиграфия для бизнеса</h3>
               <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее
@@ -397,5 +397,5 @@
       </div>
     </div>
   </footer>
-</body>
+ </body>
 </html>
