--- a/index.html
+++ b/index.html
@@ -315,44 +315,50 @@
         <h2 class="section-title">Все самое <span class="accent">интересное</span></h2>
         <ul class="list">
           <li class="item">
-            <div class="label-image-content">
-              <p class="label upper">Новость</p>
-              <img src="./images/news/img1.jpg" width="420" height="236" alt="">
-            </div>
-            <div class="text-content">
-              <p class="date">21.03.2020</p>
-              <h3>Уникальная услуга «вывеска в аренду»</h3>
-              <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в
-                дополнительной
-                визуальной рекламе.</p>
-              <button class="button upper details" type="button">Подробнее</button>
-            </div>
-          </li>
-          <li class="item">
-            <div class="label-image-content">
-              <p class="label upper">Статья</p>
-              <img src="./images/news/img2.jpg" width="420" height="236" alt="">
-            </div>
-            <div class="text-content">
-              <p class="date">21.03.2020</p>
-              <h3>Лайфхаки полиграфии от заказчиков</h3>
-              <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не
-                предоставляет
-                только ленивый. Так как предложений очень много, то, соответственно и достаточно высок.</p>
-              <button class="button upper details" type="button">Подробнее</button>
+            <div class="box-item">
+              <div class="label-image-content">
+                <p class="label upper">Новость</p>
+                <img src="./images/news/img1.jpg" width="420" height="236" alt="">
+              </div>
+              <div class="text-content">
+                <p class="date">21.03.2020</p>
+                <h3>Уникальная услуга «вывеска в аренду»</h3>
+                <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в
+                  дополнительной
+                  визуальной рекламе.</p>
+                <button class="button upper details" type="button">Подробнее</button>
+              </div>
             </div>
           </li>
           <li class="item">
-            <div class="label-image-content">
-              <p class="label upper">Статья</p>
-              <img src="./images/news/img3.jpg" width="420" height="236" alt="">
+            <div class="box-item">
+              <div class="label-image-content">
+                <p class="label upper">Статья</p>
+                <img src="./images/news/img2.jpg" width="420" height="236" alt="">
+              </div>
+              <div class="text-content">
+                <p class="date">21.03.2020</p>
+                <h3>Лайфхаки полиграфии от заказчиков</h3>
+                <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не
+                  предоставляет
+                  только ленивый. Так как предложений очень много, то, соответственно и достаточно высок.</p>
+                <button class="button upper details" type="button">Подробнее</button>
+              </div>
             </div>
-            <div class="text-content">
-              <p class="date">21.03.2020</p>
-              <h3>Полиграфия для бизнеса</h3>
-              <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее
-                количество людей с новым предприятием, нужна эффективная реклама.</p>
-              <button class="button upper details" type="button">подробнее</button>
+          </li>
+          <li class="item">
+            <div class="box-item">
+              <div class="label-image-content">
+                <p class="label upper">Статья</p>
+                <img src="./images/news/img3.jpg" width="420" height="236" alt="">
+              </div>
+              <div class="text-content">
+                <p class="date">21.03.2020</p>
+                <h3>Полиграфия для бизнеса</h3>
+                <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее
+                  количество людей с новым предприятием, нужна эффективная реклама.</p>
+                <button class="button upper details" type="button">подробнее</button>
+              </div>
             </div>
           </li>
         </ul>
@@ -363,28 +369,30 @@
   <footer class="footer">
     <div class="container">
       <div class="top-footer">
-        <div>
+        <div class="container-section-title">
           <a class="link fotter-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного
             цикла</a>
           <button class="button upper" type="button">Оставить заявку</button>
         </div>
-        <nav>
-          <ul class="list main-nav">
-            <li><a class="link" href="./html/about.html">О компании</a></li>
-            <li><a class="link" href="./html/features.html">Услуги</a></li>
-            <li><a class="link" href="./html/works.html">Наши работы</a></li>
-            <li><a class="link" href="./html/services.html">Сервис</a></li>
-            <li><a class="link" href="./html/complex.html">Комплексные решения</a></li>
-            <li><a class="link" href="./html/posts.html">Статьи и новости</a></li>
-            <li><a class="link" href="./html/contacts.html">Контакты</a></li>
-          </ul>
-        </nav>
-        <div>
-          <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-          <form>
-            <input class="placeholder" type="email" placeholder="Ваш e-mail">
-            <button type="submit">&#8594;</button>
-          </form>
+        <div class="container-list">
+          <nav>
+            <ul class="list main-nav">
+              <li><a class="link" href="./html/about.html">О компании</a></li>
+              <li><a class="link" href="./html/features.html">Услуги</a></li>
+              <li><a class="link" href="./html/works.html">Наши работы</a></li>
+              <li><a class="link" href="./html/services.html">Сервис</a></li>
+              <li><a class="link" href="./html/complex.html">Комплексные решения</a></li>
+              <li><a class="link" href="./html/posts.html">Статьи и новости</a></li>
+              <li><a class="link" href="./html/contacts.html">Контакты</a></li>
+            </ul>
+          </nav>
+          <div>
+            <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+            <form>
+              <input class="placeholder" type="email" placeholder="Ваш e-mail">
+              <button type="submit">&#8594;</button>
+            </form>
+          </div>
         </div>
       </div>
       <div class="low-footer">
