--- a/index.html
+++ b/index.html
@@ -367,43 +367,49 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
-      <div class="top-footer">
-        <div class="container-section-title">
-          <a class="link fotter-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного
-            цикла</a>
-          <button class="button upper" type="button">Оставить заявку</button>
-        </div>
-        <div class="container-list">
-          <nav>
-            <ul class="list main-nav">
-              <li><a class="link" href="./html/about.html">О компании</a></li>
-              <li><a class="link" href="./html/features.html">Услуги</a></li>
-              <li><a class="link" href="./html/works.html">Наши работы</a></li>
-              <li><a class="link" href="./html/services.html">Сервис</a></li>
-              <li><a class="link" href="./html/complex.html">Комплексные решения</a></li>
-              <li><a class="link" href="./html/posts.html">Статьи и новости</a></li>
-              <li><a class="link" href="./html/contacts.html">Контакты</a></li>
-            </ul>
-          </nav>
-          <div>
-            <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-            <form>
-              <input class="placeholder" type="email" placeholder="Ваш e-mail">
-              <button type="submit">&#8594;</button>
-            </form>
+    <div class="footer-dark">
+      <div class="container">
+        <div class="top-footer">
+          <div class="container-section-title">
+            <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного
+              цикла</a>
+            <button class="button upper" type="button">Оставить заявку</button>
+          </div>
+          <div class="container-list">
+            <div class="footer-container">
+              <nav class="container-list">
+                <ul class="list main-nav">
+                  <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
+                  <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
+                  <li class="item"><a class="link" href="./html/works.html">Наши работы</a></li>
+                  <li class="item"><a class="link" href="./html/services.html">Сервис</a></li>
+                  <li class="item"><a class="link" href="./html/complex.html">Комплексные решения</a></li>
+                  <li class="item"><a class="link" href="./html/posts.html">Статьи и новости</a></li>
+                  <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
+                </ul>
+              </nav>
+              <div class="container-list">
+                <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                <form>
+                  <input class="placeholder" type="email" placeholder="Ваш e-mail">
+                  <button type="submit">&#8594;</button>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="low-footer">
-        <p>&copy; 2011-2020 Promomix</p>
-        <ul class="list">
-          <li><a class="link" href=""></a>Facebook</li>
-          <li><a class="link" href=""></a>Vkontakte</li>
-          <li><a class="link" href=""></a>Instagram</li>
-        </ul>
-      </div>
     </div>
+      <div class="container">
+        <div class="low-footer">
+          <p>&copy; 2011-2020 Promomix</p>
+          <ul class="list">
+            <li><a class="link" href=""></a>Facebook</li>
+            <li><a class="link" href=""></a>Vkontakte</li>
+            <li><a class="link" href=""></a>Instagram</li>
+          </ul>
+        </div>
+      </div>  
   </footer>
  </body>
 </html>
