--- a/index.html
+++ b/index.html
@@ -321,12 +321,13 @@
                 <img src="./images/news/img1.jpg" width="420" height="236" alt="">
               </div>
               <div class="text-content">
-                <p class="date">21.03.2020</p>
-                <h3>Уникальная услуга «вывеска в аренду»</h3>
-                <p>У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает необходимость в
-                  дополнительной
-                  визуальной рекламе.</p>
-                <button class="button upper details" type="button">Подробнее</button>
+                <a href="" class="link">
+                  <p class="date">21.03.2020</p>
+                  <h3>Уникальная услуга «вывеска в аренду»</h3>
+                  <p class="discription">У владельца любого малого, но успешно развивающегося бизнеса рано или поздно возникает
+                    необходимость в дополнительной визуальной рекламе.</p>
+                  <p class="upper details">Подробнее</p>
+                </a>
               </div>
             </div>
           </li>
@@ -337,12 +338,13 @@
                 <img src="./images/news/img2.jpg" width="420" height="236" alt="">
               </div>
               <div class="text-content">
-                <p class="date">21.03.2020</p>
-                <h3>Лайфхаки полиграфии от заказчиков</h3>
-                <p>Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов, кажется, не
-                  предоставляет
-                  только ленивый. Так как предложений очень много, то, соответственно и достаточно высок.</p>
-                <button class="button upper details" type="button">Подробнее</button>
+                <a href="" class="link">
+                  <p class="date">21.03.2020</p>
+                  <h3>Лайфхаки полиграфии от заказчиков</h3>
+                  <p class="discription">Лайфхаки полиграфии от опытных заказчиков. Сегодня услуги по печати рекламных материалов,
+                    кажется, не предоставляет только ленивый. Так как предложений очень много, то, соответственно и достаточно высок.</p>
+                  <p class="upper details">Подробнее</p>
+                </a>
               </div>
             </div>
           </li>
@@ -353,11 +355,14 @@
                 <img src="./images/news/img3.jpg" width="420" height="236" alt="">
               </div>
               <div class="text-content">
-                <p class="date">21.03.2020</p>
-                <h3>Полиграфия для бизнеса</h3>
-                <p>Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как можно большее
-                  количество людей с новым предприятием, нужна эффективная реклама.</p>
-                <button class="button upper details" type="button">подробнее</button>
+                <a href="" class="link">
+                  <p class="date">21.03.2020</p>
+                  <h3>Полиграфия для бизнеса</h3>
+                  <p class="discription">Чтобы выделиться среди конкурентов на современном рынке товаров и услуг, или познакомить как
+                    можно большее
+                    количество людей с новым предприятием, нужна эффективная реклама.</p>
+                  <p class="upper details">Подробнее</p>
+                </a>
               </div>
             </div>
           </li>
