--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 </ul>
               </nav>
               <div class="container-list">
-                <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
                 <form>
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
                   <button type="submit">&#8594;</button>
@@ -408,10 +408,10 @@
       <div class="container">
         <div class="low-footer">
           <p>&copy; 2011-2020 Promomix</p>
-          <ul class="list">
-            <li><a class="link" href=""></a>Facebook</li>
-            <li><a class="link" href=""></a>Vkontakte</li>
-            <li><a class="link" href=""></a>Instagram</li>
+          <ul  class="list social-list">
+            <li class="social-item"><a class="link" href="">Facebook</a></li>
+            <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+            <li class="social-item"><a class="link" href="">Instagram</a></li>
           </ul>
         </div>
       </div>  
