--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="container">
         <p class="title-label">Услуги</p>
         <h2 class="section-title">Ключевые <span class="accent">направления</span></h2>
-        <ul class="list direction-list">
-          <li class="direction-item">
+        <ul class="list grid-list">
+          <li class="grid-item">
             <a class="link" href="">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -62,7 +62,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -74,7 +74,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="./html/polygraphy.html">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -98,7 +98,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -122,7 +122,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -134,7 +134,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="./html/features.html">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
