--- a/html/about.html
+++ b/html/about.html
@@ -10,194 +10,241 @@
 </head>
 <body>
   <header class="header">
-    <a class="link" href="../index.html">promomix</a>
-    <ul class="list nav">
-      <li class="list-item"><button class="button" type="button">Поиск</button></li>
-      <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-      <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-    </ul>
+    <div class="container">
+      <div class="content-in-row">
+        <a class="link" href="../index.html"><img src="../images/icons/logo.svg" alt=""></a>
+        <ul class="list nav">
+          <li class="list-item ">
+            <button class="button content-in-row" type="button">
+              <svg class="icon">
+                <use href="./images/sprite.svg#icon-search"></use>
+              </svg>
+              Поиск
+            </button>
+          </li>
+          <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
+          <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
+        </ul>
+      </div>
+    </div>
   </header>
   <main>
-    <section class="hero-about">
-      <h1 class="page-title">О компании</h1>
-      <p><span lang="en">Promomix – </span>одна из крупнейших компаний на рекламном рынке Подмосковья.</p>
-      <img src="../images/about/our-team.jpg" width="1400" height="675" alt="">
-      <ul class="list">
-        <li class="benefits-item">
-          <span class="accent benefits-number">18+</span>
-          <p>лет опыта на рекламном рынке</p>
-        </li>
-        <li class="benefits-item">
-          <span class="accent benefits-number">250+</span>
-          <p>реализованных
-            проектов</p>
-        </li>
-        <li class="benefits-item">
-          <span class="accent benefits-number">37</span>
-          <p>квалифицированных
-            сотрудников</p>
-        </li>
-        <li class="benefits-item">
-          <span class="accent benefits-number">14+</span>
-          <p>профессионального
-            оборудования</p>
-        </li>
-      </ul>
+    <section class="section hero-about">
+      <div class="container">
+        <div class="hero-about-text">
+          <div class="container-list title-box">
+            <h1 class="page-title">О компании</h1>
+          </div>
+          <div class="container-list discription-box">
+            <p><span lang="en">Promomix – </span>одна из крупнейших компаний <br> на рекламном рынке Подмосковья.</p>
+          </div>
+        </div>
+        <img src="../images/about/our-team.jpg" width="1400" height="675" alt="">
+        <ul class="list grid-list">
+          <li class="benefits-item grid-item">
+            <span class="accent benefits-number">18+</span>
+            <p>лет опыта на рекламном рынке</p>
+          </li>
+          <li class="benefits-item grid-item">
+            <span class="accent benefits-number">250+</span>
+            <p>реализованных
+              проектов</p>
+          </li>
+          <li class="benefits-item grid-item">
+            <span class="accent benefits-number">37</span>
+            <p>квалифицированных
+              сотрудников</p>
+          </li>
+          <li class="benefits-item grid-item">
+            <span class="accent benefits-number">14+</span>
+            <p>профессионального
+              оборудования</p>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section>
-      <p class="title-label">Доверьте рекламу профессионалам</p>
-      <h2 class="section-title visually-hidden">Мы лучшие</h2>
-      <p>Мы создаем не просто рекламу, а формируем уникальный имидж
-      наших клиентов. Предоставляем широкий спектр услуг – от создания фирменного стиля до наружной рекламы. Благодаря
-      современному оборудованию и точной работе наших сотрудников, ваш бизнес станет узнаваемым и успешным.</p>
+    <section class="section">
+      <div class="container">
+        <p class="title-label">Доверьте рекламу профессионалам</p>
+        <h2 class="section-title visually-hidden">Мы лучшие</h2>
+        <p>Мы создаем не просто рекламу, а формируем уникальный имидж
+          наших клиентов. Предоставляем широкий спектр услуг – от создания фирменного стиля до наружной рекламы. Благодаря
+          современному оборудованию и точной работе наших сотрудников, ваш бизнес станет узнаваемым и успешным.</p>
+      </div>
     </section>
-    <section class="services">
-      <p class="title-label">Услуги</p>
-      <h2 class="section-title">Ключевые <span class="accent">направления</span></h2>
-      <ul class="list">
-        <li><a class="link" href="">Наружная реклама</a></li>
-        <li><a class="link" href="">Широкоформатная печать</a></li>
-        <li><a class="link" href="../html/polygraphy.html">Рекламная полиграфия</a></li>
-        <li><a class="link" href="">Сувенирная продукция</a></li>
-        <li><a class="link" href="">Внутрення реклама</a></li>
-        <li><a class="link" href="">Брендирование одежды</a></li>
-        <li><a class="link" href="">Брендирование транспорта</a></li>
-        <li><a class="link" href="../html/features.html">Все услуги</a></li>
-      </ul>
+    <section class="section services">
+      <div class="container">
+        <p class="title-label">Услуги</p>
+        <h2 class="section-title">Ключевые <span class="accent">направления</span></h2>
+        <ul class="list">
+          <li><a class="link" href="">Наружная реклама</a></li>
+          <li><a class="link" href="">Широкоформатная печать</a></li>
+          <li><a class="link" href="../html/polygraphy.html">Рекламная полиграфия</a></li>
+          <li><a class="link" href="">Сувенирная продукция</a></li>
+          <li><a class="link" href="">Внутрення реклама</a></li>
+          <li><a class="link" href="">Брендирование одежды</a></li>
+          <li><a class="link" href="">Брендирование транспорта</a></li>
+          <li><a class="link" href="../html/features.html">Все услуги</a></li>
+        </ul>
+      </div>
     </section>
-    <section class="history">
-      <p class="title-label">История</p>
-      <h2 class="section-title"><span class="accent">18+</span> лет опыта на рекламном рынке</h2>
-      <ul class="list">
-        <li class="history-item">
-          <span class="accent history-number">2011</span>
-          <p>Запустили цеха по производству рекламных материалов для обеспечения потребностей наших клиентов в полном цикле рекламных
-          услуг. Росли и развивались, постоянно пополняя ассортимент рекламной продукции.</p>
-        </li>
-        <li class="history-item">
-          <span class="accent history-number">2015</span>
-          <p>Провели модернизацию наших цехов. Закупили самые современные станки и принтеры. Благодаря высокому качеству печати
-          привлекли множество новых клиентов и стали востребованной компанией на рекламном рынке.</p>
-        </li>
-        <li class="history-item">
-          <span class="accent history-number">2017</span>
-          <p>Приобрели дополнительное оборудование, что позволило значительно расширить ассортимент изготавливаемой продукции. Мощный
-          рост направления нашей деятельности привел к разделению наружной
-          рекламы и производства.</p>
-        </li>
-        <li class="history-item">
-          <span class="accent history-number">2019</span>
-          <p>На сегодняшний день компания Promomix входит в число наиболее энергично развивающихся рекламно-производственных компаний
-          Подмосковья. В наших цехах работают станки для производства практически всех видов рекламной продукции.</p>
-        </li>
-      </ul>
-      <img src="../images/about/about-history.jpg" alt="">
+    <section class="section history">
+      <div class="container">
+        <p class="title-label">История</p>
+        <h2 class="section-title"><span class="accent">18+</span> лет опыта на рекламном рынке</h2>
+        <ul class="list">
+          <li class="history-item">
+            <span class="accent history-number">2011</span>
+            <p>Запустили цеха по производству рекламных материалов для обеспечения потребностей наших клиентов в полном цикле
+              рекламных
+              услуг. Росли и развивались, постоянно пополняя ассортимент рекламной продукции.</p>
+          </li>
+          <li class="history-item">
+            <span class="accent history-number">2015</span>
+            <p>Провели модернизацию наших цехов. Закупили самые современные станки и принтеры. Благодаря высокому качеству
+              печати
+              привлекли множество новых клиентов и стали востребованной компанией на рекламном рынке.</p>
+          </li>
+          <li class="history-item">
+            <span class="accent history-number">2017</span>
+            <p>Приобрели дополнительное оборудование, что позволило значительно расширить ассортимент изготавливаемой продукции.
+              Мощный
+              рост направления нашей деятельности привел к разделению наружной
+              рекламы и производства.</p>
+          </li>
+          <li class="history-item">
+            <span class="accent history-number">2019</span>
+            <p>На сегодняшний день компания Promomix входит в число наиболее энергично развивающихся рекламно-производственных
+              компаний
+              Подмосковья. В наших цехах работают станки для производства практически всех видов рекламной продукции.</p>
+          </li>
+        </ul>
+        <img src="../images/about/about-history.jpg" alt="">
+      </div>
     </section>
-    <section>
-      <h2 class="section-title">Оборудование</h2>
-      <img src="../images/about/milling-machine.jpg" alt="">
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Оборудование</h2>
+        <img src="../images/about/milling-machine.jpg" alt="">
+      </div>
     </section>
     
-    <section class="works">
-      <p class="title-label">Наши работы</p>
-      <h2 class="section-title">Воплощаем <span class="accent">идеи</span></h2>
-      <ul class="list">
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img1.jpg" width="360" height="270" alt="">
-              <h3>Кафе Starbucks Coffee</h3>
-            </div>
-          </a>
-          <p class="upper">Вывеска объемная</p>
-        </li>
-        <!-- <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img2.jpg" width="570" height="570" alt="">
-              <h3>Bio бутик Flora</h3>
-            </div>
-          </a>
-          <p>Наружная реклама</p>
-        </li> -->
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img3.jpg" width="360" height="360" alt="">
-              <h3>Сеть ресторанов Emosi</h3>
-            </div>
-          </a>
-          <p>Вывеска объемная</p>
-        </li>
-        <!-- <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img4.jpg" width="570" height="370" alt="">
-              <h3>Бизнес центр Sierra</h3>
-            </div>
-          </a>
-          <p>Фирменный стиль</p>
-        </li> -->
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img6.jpg" width="360" height="270" alt="">
-              <h3>Релакс студия Flora</h3>
-            </div>
-          </a>
-          <p>Фирменный стиль</p>
-        </li>
-        <li>
-          <a class="link" href="">
-            <div>
-              <img src="../images/ourworks/img5.jpg" width="370" height="370" alt="">
-              <h3>Магазин Levi's</h3>
-            </div>
-          </a>
-          <p>Входная группа и вывеска</p>
-        </li>
-      </ul>
-      <button class="button" type="button">Все работы</button>
+    <section class="section works">
+      <div class="container">
+        <p class="title-label">Наши работы</p>
+        <h2 class="section-title">Воплощаем <span class="accent">идеи</span></h2>
+        <ul class="list">
+          <li>
+            <a class="link" href="">
+              <div>
+                <img src="../images/ourworks/img1.jpg" width="360" height="270" alt="">
+                <h3>Кафе Starbucks Coffee</h3>
+              </div>
+            </a>
+            <p class="upper">Вывеска объемная</p>
+          </li>
+          <!-- <li>
+                  <a class="link" href="">
+                    <div>
+                      <img src="../images/ourworks/img2.jpg" width="570" height="570" alt="">
+                      <h3>Bio бутик Flora</h3>
+                    </div>
+                  </a>
+                  <p>Наружная реклама</p>
+                </li> -->
+          <li>
+            <a class="link" href="">
+              <div>
+                <img src="../images/ourworks/img3.jpg" width="360" height="360" alt="">
+                <h3>Сеть ресторанов Emosi</h3>
+              </div>
+            </a>
+            <p>Вывеска объемная</p>
+          </li>
+          <!-- <li>
+                  <a class="link" href="">
+                    <div>
+                      <img src="../images/ourworks/img4.jpg" width="570" height="370" alt="">
+                      <h3>Бизнес центр Sierra</h3>
+                    </div>
+                  </a>
+                  <p>Фирменный стиль</p>
+                </li> -->
+          <li>
+            <a class="link" href="">
+              <div>
+                <img src="../images/ourworks/img6.jpg" width="360" height="270" alt="">
+                <h3>Релакс студия Flora</h3>
+              </div>
+            </a>
+            <p>Фирменный стиль</p>
+          </li>
+          <li>
+            <a class="link" href="">
+              <div>
+                <img src="../images/ourworks/img5.jpg" width="370" height="370" alt="">
+                <h3>Магазин Levi's</h3>
+              </div>
+            </a>
+            <p>Входная группа и вывеска</p>
+          </li>
+        </ul>
+        <button class="button" type="button">Все работы</button>
+      </div>
     </section>
-    <section class="application">
-      <h2 class="section-title">Заявка</h2>
-      <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами
-      в ближайшее время</p>
-      <form action=""></form>
+    <section class="section application">
+      <div class="container">
+        <h2 class="section-title">Заявка</h2>
+        <p>Оставьте заявку, наш менеджер обработает её и свяжется с вами
+          в ближайшее время</p>
+        <form action=""></form>
+      </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="top-footer">
-      <div>
-        <a class="link fotter-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного цикла</a>
-        <button class="button upper" type="button">Оставить заявку</button>
-      </div>
-      <nav>
-        <ul class="list main-nav">
-          <li><a class="link" href="./html/about.html">О компании</a></li>
-          <li><a class="link" href="./features.html">Услуги</a></li>
-          <li><a class="link" href="./works.html">Наши работы</a></li>
-          <li><a class="link" href="./services.html">Сервис</a></li>
-          <li><a class="link" href="./complex.html">Комплексные решения</a></li>
-          <li><a class="link" href="./posts.html">Статьи и новости</a></li>
-          <li><a class="link" href="./contacts.html">Контакты</a></li>
-        </ul>
-      </nav>
-      <div>
-        <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-        <form>
-          <input class="placeholder" type="email" placeholder="Ваш e-mail">
-          <button type="submit">&#8594;</button>
-        </form>
+    <div class="footer-dark">
+      <div class="container">
+        <div class="top-footer">
+          <div class="container-section-title">
+            <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
+              полного
+              цикла</a>
+            <button class="button upper" type="button">Оставить заявку</button>
+          </div>
+          <div class="container-list">
+            <div class="footer-container">
+              <nav class="container-list">
+                <ul class="list main-nav">
+                  <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
+                  <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
+                  <li class="item"><a class="link" href="./html/works.html">Наши работы</a></li>
+                  <li class="item"><a class="link" href="./html/services.html">Сервис</a></li>
+                  <li class="item"><a class="link" href="./html/complex.html">Комплексные решения</a></li>
+                  <li class="item"><a class="link" href="./html/posts.html">Статьи и новости</a></li>
+                  <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
+                </ul>
+              </nav>
+              <div class="container-list">
+                <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                <form>
+                  <input class="placeholder" type="email" placeholder="Ваш e-mail">
+                  <button type="submit">&#8594;</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="low-footer">
-      <p>&copy; 2011-2020 Promomix</p>
-      <ul class="list">
-        <li><a class="link" href=""></a>Facebook</li>
-        <li><a class="link" href=""></a>Vkontakte</li>
-        <li><a class="link" href=""></a>Instagram</li>
-      </ul>
+    <div class="container">
+      <div class="low-footer">
+        <p>&copy; 2011-2020 Promomix</p>
+        <ul class="list social-list">
+          <li class="social-item"><a class="link" href="">Facebook</a></li>
+          <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+          <li class="social-item"><a class="link" href="">Instagram</a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
