--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -110,7 +110,7 @@
               </div>
             </a>
           </li>
-          <li class="direction-item">
+          <li class="grid-item">
             <a class="link" href="">
               <div class="direction-item-box">
                 <div class="direction-icon-box">
@@ -151,13 +151,13 @@
     </section>
     <section class="benefits section">
       <div class="container">
-        <div class="benefits-container">
-          <div class="container-section-title">
+        <div class="flex-list">
+          <div class="flex-item">
             <p class="title-label">Наши преимущества</p>
             <h2 class="section-title"><span class="accent">Создаем рекламу</span><br> и формируем имидж<br> компаний</h2>
           </div>
           <div class="container-list">
-            <ul class="list">
+            <ul class="list flex-list">
               <li class="benefits-item">
                 <span class="accent benefits-number">18+</span>
                 <div class="container-p">
@@ -252,13 +252,13 @@
     </section>
     <section class="section partners">
       <div class="container">
-        <div class="partners-container">
-          <div class="container-section-title">
+        <div class="flex-list">
+          <div class="flex-item">
             <p class="title-label">Наши партнеры</p>
             <h2 class="section-title"><span class="accent">400+</span> компаний доверяют нам</h2>
           </div>
           <div class="container-list">
-            <ul class="list">
+            <ul class="list flex-list">
               <li class="item">
                 <div class="img-box">
                   <img src="./images/ourpartners/img1.svg" width="124" height="64" alt="">
@@ -375,13 +375,13 @@
     <div class="footer-dark">
       <div class="container">
         <div class="top-footer">
-          <div class="container-section-title">
+          <div class="flex-item">
             <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного
               цикла</a>
             <button class="button upper" type="button">Оставить заявку</button>
           </div>
           <div class="container-list">
-            <div class="footer-container">
+            <div class="flex-list">
               <nav class="container-list">
                 <ul class="list main-nav">
                   <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
