--- a/html/about.html
+++ b/html/about.html
@@ -32,10 +32,10 @@
     <section class="section hero-about">
       <div class="container">
         <div class="hero-about-text">
-          <div class="container-list title-box">
+          <div class="flex-item title-box">
             <h1 class="page-title">О компании</h1>
           </div>
-          <div class="container-list discription-box">
+          <div class="flex-item discription-box">
             <p><span lang="en">Promomix – </span>одна из крупнейших компаний <br> на рекламном рынке Подмосковья.</p>
           </div>
         </div>
@@ -63,7 +63,7 @@
         </ul>
       </div>
     </section>
-    <section class="section">
+    <section class="section annnotation">
       <div class="container">
         <p class="title-label">Доверьте рекламу профессионалам</p>
         <h2 class="section-title visually-hidden">Мы лучшие</h2>
@@ -205,15 +205,15 @@
     <div class="footer-dark">
       <div class="container">
         <div class="top-footer">
-          <div class="container-section-title">
+          <div class="flex-item">
             <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
               полного
               цикла</a>
             <button class="button upper" type="button">Оставить заявку</button>
           </div>
-          <div class="container-list">
+          <div class="flex-item">
             <div class="footer-container">
-              <nav class="container-list">
+              <nav class="flex-item">
                 <ul class="list main-nav">
                   <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
                   <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
@@ -224,7 +224,7 @@
                   <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
                 </ul>
               </nav>
-              <div class="container-list">
+              <div class="flex-item">
                 <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
                 <form>
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
