--- a/index.html
+++ b/index.html
@@ -156,27 +156,27 @@
             <p class="title-label">Наши преимущества</p>
             <h2 class="section-title"><span class="accent">Создаем рекламу</span><br> и формируем имидж<br> компаний</h2>
           </div>
-          <div class="container-list">
+          <div class="flex-item">
             <ul class="list flex-list">
-              <li class="benefits-item">
+              <li class="item flex-item">
                 <span class="accent benefits-number">18+</span>
                 <div class="container-p">
                   <p>лет опыта на рекламном рынке</p>
                 </div>
               </li>
-              <li class="benefits-item">
+              <li class="item flex-item">
                 <span class="accent benefits-number">250+</span>
                 <div class="container-p">
                   <p>реализованных проектов</p>
                 </div>
               </li>
-              <li class="benefits-item">
+              <li class="item flex-item">
                 <span class="accent benefits-number">37</span>
                 <div class="container-p">
                   <p>квалифицированных сотрудников</p>
                 </div>
               </li>
-              <li class="benefits-item">
+              <li class="item flex-item">
                 <span class="accent benefits-number">14+</span>
                 <div class="container-p">
                   <p>профессионального оборудования</p>
@@ -257,7 +257,7 @@
             <p class="title-label">Наши партнеры</p>
             <h2 class="section-title"><span class="accent">400+</span> компаний доверяют нам</h2>
           </div>
-          <div class="container-list">
+          <div class="flex-item">
             <ul class="list flex-list">
               <li class="item">
                 <div class="img-box">
@@ -380,9 +380,9 @@
               цикла</a>
             <button class="button upper" type="button">Оставить заявку</button>
           </div>
-          <div class="container-list">
+          <div class="flex-item">
             <div class="flex-list">
-              <nav class="container-list">
+              <nav class="flex-item">
                 <ul class="list main-nav">
                   <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
                   <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
@@ -393,7 +393,7 @@
                   <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
                 </ul>
               </nav>
-              <div class="container-list">
+              <div class="flex-item">
                 <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
                 <form>
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
