--- a/html/about.html
+++ b/html/about.html
@@ -63,13 +63,17 @@
         </ul>
       </div>
     </section>
-    <section class="section annnotation">
+    <section class="section annotation">
       <div class="container">
-        <p class="title-label">Доверьте рекламу профессионалам</p>
-        <h2 class="section-title visually-hidden">Мы лучшие</h2>
-        <p>Мы создаем не просто рекламу, а формируем уникальный имидж
-          наших клиентов. Предоставляем широкий спектр услуг – от создания фирменного стиля до наружной рекламы. Благодаря
-          современному оборудованию и точной работе наших сотрудников, ваш бизнес станет узнаваемым и успешным.</p>
+        <div class="annotation-content">
+          <p class="title-label">Доверьте рекламу профессионалам</p>
+          <h2 class="section-title visually-hidden">Мы лучшие</h2>
+          <p class="annotation-text">Мы создаем не просто рекламу, а формируем уникальный имидж
+            наших клиентов. Предоставляем широкий спектр услуг – от создания фирменного стиля до наружной рекламы. Благодаря
+            современному оборудованию и точной работе наших сотрудников, ваш бизнес станет узнаваемым и успешным.</p>
+        </div>
+        <div class="annotation-image">
+        </div>
       </div>
     </section>
     <section class="section services">
