--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>О компании</title>
   <link rel="stylesheet" href="./fonts/stylesheet.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header class="header">
