--- a/html/about.html
+++ b/html/about.html
@@ -76,53 +76,146 @@
         </div>
       </div>
     </section>
-    <section class="section services">
+    <section class="services section">
       <div class="container">
         <p class="title-label">Услуги</p>
         <h2 class="section-title">Ключевые <span class="accent">направления</span></h2>
-        <ul class="list">
-          <li><a class="link" href="">Наружная реклама</a></li>
-          <li><a class="link" href="">Широкоформатная печать</a></li>
-          <li><a class="link" href="../html/polygraphy.html">Рекламная полиграфия</a></li>
-          <li><a class="link" href="">Сувенирная продукция</a></li>
-          <li><a class="link" href="">Внутрення реклама</a></li>
-          <li><a class="link" href="">Брендирование одежды</a></li>
-          <li><a class="link" href="">Брендирование транспорта</a></li>
-          <li><a class="link" href="../html/features.html">Все услуги</a></li>
+        <ul class="list grid-list">
+          <li class="grid-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="55">
+                    <use href="../images/sprite.svg#icon-codepen"></use>
+                  </svg>
+                </div>
+                Наружная реклама
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="47">
+                    <use href="../images/sprite.svg#icon-printer"></use>
+                  </svg>
+                </div>
+                Широкоформатная печать
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="../html/polygraphy.html">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="55">
+                    <use href="../images/sprite.svg#icon-copy"></use>
+                  </svg>
+                </div>
+                Рекламная полиграфия
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="52">
+                    <use href="../images/sprite.svg#icon-beer"></use>
+                  </svg>
+                </div>
+                Сувенирная продукция
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="50">
+                    <use href="../images/sprite.svg#icon-chalkboard"></use>
+                  </svg>
+                </div>
+                Внутрення реклама
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="58" height="53">
+                    <use href="../images/sprite.svg#icon-t-shirt"></use>
+                  </svg>
+                </div>
+                Брендирование одежды
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="55" height="55">
+                    <use href="../images/sprite.svg#icon-bus"></use>
+                  </svg>
+                </div>
+                Брендирование транспорта
+              </div>
+            </a>
+          </li>
+          <li class="grid-item">
+            <a class="link" href="../html/features.html">
+              <div class="direction-item-box">
+                <div class="direction-icon-box">
+                  <svg class="icon" width="50" height="40">
+                    <use href="../images/sprite.svg#icon-arrow"></use>
+                  </svg>
+                </div>
+                Все услуги
+              </div>
+            </a>
+          </li>
         </ul>
       </div>
     </section>
     <section class="section history">
       <div class="container">
-        <p class="title-label">История</p>
-        <h2 class="section-title"><span class="accent">18+</span> лет опыта на рекламном рынке</h2>
-        <ul class="list">
-          <li class="history-item">
-            <span class="accent history-number">2011</span>
-            <p>Запустили цеха по производству рекламных материалов для обеспечения потребностей наших клиентов в полном цикле
-              рекламных
-              услуг. Росли и развивались, постоянно пополняя ассортимент рекламной продукции.</p>
-          </li>
-          <li class="history-item">
-            <span class="accent history-number">2015</span>
-            <p>Провели модернизацию наших цехов. Закупили самые современные станки и принтеры. Благодаря высокому качеству
-              печати
-              привлекли множество новых клиентов и стали востребованной компанией на рекламном рынке.</p>
-          </li>
-          <li class="history-item">
-            <span class="accent history-number">2017</span>
-            <p>Приобрели дополнительное оборудование, что позволило значительно расширить ассортимент изготавливаемой продукции.
-              Мощный
-              рост направления нашей деятельности привел к разделению наружной
-              рекламы и производства.</p>
-          </li>
-          <li class="history-item">
-            <span class="accent history-number">2019</span>
-            <p>На сегодняшний день компания Promomix входит в число наиболее энергично развивающихся рекламно-производственных
-              компаний
-              Подмосковья. В наших цехах работают станки для производства практически всех видов рекламной продукции.</p>
-          </li>
-        </ul>
+        <div class="flex-list">
+          <div class="flex-item">
+            <p class="title-label">История</p>
+            <h2 class="section-title"><span class="accent">18+</span> лет опыта на рекламном рынке</h2>
+          </div>
+          <ul class="list flex-item">
+            <li class="history-item">
+              <span class="accent history-number">2011</span>
+              <p>Запустили цеха по производству рекламных материалов для обеспечения потребностей наших клиентов в полном цикле
+                рекламных
+                услуг. Росли и развивались, постоянно пополняя ассортимент рекламной продукции.</p>
+            </li>
+            <li class="history-item">
+              <span class="accent history-number">2015</span>
+              <p>Провели модернизацию наших цехов. Закупили самые современные станки и принтеры. Благодаря высокому качеству
+                печати
+                привлекли множество новых клиентов и стали востребованной компанией на рекламном рынке.</p>
+            </li>
+            <li class="history-item">
+              <span class="accent history-number">2017</span>
+              <p>Приобрели дополнительное оборудование, что позволило значительно расширить ассортимент изготавливаемой продукции.
+                Мощный
+                рост направления нашей деятельности привел к разделению наружной
+                рекламы и производства.</p>
+            </li>
+            <li class="history-item">
+              <span class="accent history-number">2019</span>
+              <p>На сегодняшний день компания Promomix входит в число наиболее энергично развивающихся рекламно-производственных
+                компаний
+                Подмосковья. В наших цехах работают станки для производства практически всех видов рекламной продукции.</p>
+            </li>
+          </ul>
+        </div>
+        
         <img src="../images/about/about-history.jpg" alt="">
       </div>
     </section>
@@ -216,16 +309,16 @@
             <button class="button upper" type="button">Оставить заявку</button>
           </div>
           <div class="flex-item">
-            <div class="footer-container">
+            <div class="flex-list">
               <nav class="flex-item">
                 <ul class="list main-nav">
-                  <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
-                  <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
-                  <li class="item"><a class="link" href="./html/works.html">Наши работы</a></li>
-                  <li class="item"><a class="link" href="./html/services.html">Сервис</a></li>
-                  <li class="item"><a class="link" href="./html/complex.html">Комплексные решения</a></li>
-                  <li class="item"><a class="link" href="./html/posts.html">Статьи и новости</a></li>
-                  <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
+                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
+                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
+                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
+                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
+                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
+                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
+                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
                 </ul>
               </nav>
               <div class="flex-item">
