--- a/html/about.html
+++ b/html/about.html
@@ -312,13 +312,13 @@
             <div class="flex-list">
               <nav class="flex-item">
                 <ul class="list main-nav">
-                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
-                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
-                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
-                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
-                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
-                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
-                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
+                  <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
+                  <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
+                  <li class="item"><a class="link" href="./html/works.html">Наши работы</a></li>
+                  <li class="item"><a class="link" href="./html/services.html">Сервис</a></li>
+                  <li class="item"><a class="link" href="./html/complex.html">Комплексные решения</a></li>
+                  <li class="item"><a class="link" href="./html/posts.html">Статьи и новости</a></li>
+                  <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
                 </ul>
               </nav>
               <div class="flex-item">
