--- a/html/about.html
+++ b/html/about.html
@@ -29,7 +29,7 @@
     </div>
   </header>
   <main>
-    <section class="section hero-about">
+    <section class="hero-about section">
       <div class="container">
         <div class="hero-about-text">
           <div class="flex-item title-box">
@@ -40,27 +40,32 @@
           </div>
         </div>
         <img src="../images/about/our-team.jpg" width="1400" height="675" alt="">
-        <ul class="list grid-list">
-          <li class="benefits-item grid-item">
-            <span class="accent benefits-number">18+</span>
-            <p>лет опыта на рекламном рынке</p>
-          </li>
-          <li class="benefits-item grid-item">
-            <span class="accent benefits-number">250+</span>
-            <p>реализованных
-              проектов</p>
-          </li>
-          <li class="benefits-item grid-item">
-            <span class="accent benefits-number">37</span>
-            <p>квалифицированных
-              сотрудников</p>
-          </li>
-          <li class="benefits-item grid-item">
-            <span class="accent benefits-number">14+</span>
-            <p>профессионального
-              оборудования</p>
-          </li>
-        </ul>
+      </div>
+      <div class="benefits-about section gray-section">
+        <div class="container">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="list grid-list">
+            <li class="benefits-item grid-item">
+              <span class="accent benefits-number">18+</span>
+              <p>лет опыта на рекламном рынке</p>
+            </li>
+            <li class="benefits-item grid-item">
+              <span class="accent benefits-number">250+</span>
+              <p>реализованных
+                проектов</p>
+            </li>
+            <li class="benefits-item grid-item">
+              <span class="accent benefits-number">37</span>
+              <p>квалифицированных
+                сотрудников</p>
+            </li>
+            <li class="benefits-item grid-item">
+              <span class="accent benefits-number">14+</span>
+              <p>профессионального
+                оборудования</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <section class="section annotation">
