--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </header>
   <main>
-    <section class="hero section">
+    <section class="hero section gray-section">
      <div class="container">
         <div class="container-hero">
           <div class="container-page-title">
@@ -58,7 +58,7 @@
                     <use href="./images/sprite.svg#icon-codepen"></use>
                   </svg>
                 </div>
-                Наружная реклама
+                Наружная<br> реклама
               </div>
             </a>
           </li>
@@ -149,7 +149,7 @@
         </ul>
       </div>
     </section>
-    <section class="benefits section">
+    <section class="benefits section gray-section">
       <div class="container">
         <div class="flex-list">
           <div class="flex-item">
@@ -251,7 +251,7 @@
         <button class="button" type="button">Все работы</button>
       </div>
     </section>
-    <section class="section partners">
+    <section class="partners section gray-section">
       <div class="container">
         <div class="flex-list">
           <div class="flex-item">
@@ -373,7 +373,7 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer-dark">
+    <div class="footer-dark gray-section">
       <div class="container">
         <div class="top-footer">
           <div class="flex-item">
