--- a/html/about.html
+++ b/html/about.html
@@ -328,7 +328,7 @@
               </nav>
               <div class="flex-item">
                 <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form>
+                <form class="footer-form">
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
                   <button type="submit">&#8594;</button>
                 </form>
