--- a/index.html
+++ b/index.html
@@ -396,9 +396,14 @@
               </nav>
               <div class="flex-item">
                 <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-                <form>
+                <form class="footer-form">
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
-                  <button type="submit">&#8594;</button>
+                  <button type="submit">
+                    <!-- &#8594; -->
+                    <svg width="20" height="14">
+                      <use href="./images/sprite.svg#icon-arrow"></use>
+                    </svg>
+                  </button>
                 </form>
               </div>
             </div>
